	- jdbc2: Removed use of jdk1.4 only features to enable build with 
	  older jdk releases.
	- jdbc2: Added support for building against pg72jdbc2.jar
	- documentation updates: pgsql72 requirement, lwpostgis.sql
	- memory alignment handling
	- fixed bug in force_collection causing mapserver connector
	  failures on simple (single) geometry types.

PostGIS 1.0.0RC2
2005/01/26
	- More correct STABLE, IMMUTABLE, STRICT uses in lwpostgis.sql
	- GEOMETRYCOLLECTION(EMPTY) syntax support for backward compatibility
	- faster and more robust loader (both i18n and not)
	- faster binary outputs
	- bug fix in pointarray box3d computation
	- initial autoconf script
	- bug fix in distance_spheroid definition
	- stricter OGC WKB constructors
	- stricter OGC WKT constructors
	- bug fix in transform() missing to update bbox cache
	- LWGEOM aware JDBC driver (jdbc2)

PostGIS 1.0.0RC1
2005/01/13

- New Things
  - Objects are all now "lightweight" with a smaller disk
    and index representation. Large databases should see a moderate
    to large performance increase.
  - Objects now have a hexidecimal canonical representation.
    To see a "user friendly" version of the objects use the
    AsText() function.
  - The loader and dumper use the hexidecimal canonical representation,
    so coordinate drift due to floating point string parsing is now
    eliminated.
  - New functions: UpdateGeometrySRID(), AsGML(), SnapToGrid(),
    ForceRHR(), estimated_extent(), Accum().
  - Vertical positioning operators.
  - Geometry constructors/editors.
  - Coordinate dimensions handling (up to 4d).
  - API.
  - Join selectivity.
- Bug Fixes
  - Numerous small fixes.

PostGIS 0.9.0
2004/09/10

- New Things
  - GEOMETRY_COLUMNS management functions
    - fix_geometry_columns(), probe_geometry_columns()
  - Support for PgSQL 8.0 / Support for Win32
  - Support for GEOS 2.0
- Bug Fixes
  - Schema support in shp2pgsql/pgsql2shp improved
  - Spatial index estimator improved
  - Build system streamlined

